tests/analyze/try-undetermined/analyze.snap
---
source: tests/analyze.rs
assertion_line: 41
expression: output
---
error: `try`'s right-hand side has an undetermined type.
> 6 | 	try y = f x
       ^^^^^^^^^^^
